Downgrade to Java 16